# crewai

./: crew.py  main.py
config/: agents.yaml  tasks.yaml
marketing/: .gitignore  .~lock.CrewAI_2025_Marketing_Plan_report.pptx#  .~lock.CrewAI_6-Month_Marketing_Plan_report.pptx#  .~lock.Titan & Fastrack Integrated Marketing Plan_report.pptx#  CrewAI Marketing Strategy & Campaign Ideas_report.pptx  CrewAI Marketing Strategy_report.pptx  CrewAI_6-Month_Marketing_Plan_report.pptx  CrewAI_Marketing_Plan_report.pptx  README.md  Titan & Fastrack Integrated Marketing Plan_report.pptx  pyproject.toml
marketing/src/marketing/: crew.py  main.py
marketing/src/marketing/config/: agents.yaml  tasks.yaml
marketing/src/marketing/tools/: chart_genration_tool.py  custom_tool.py  ppt_tool.py  ppt_tool2.py
output_docs/: TDD_Document.md  TDD_Document.md.md
tools/: markdown_saver.py
